--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "effectjs": "0.0.8",
     "react": "^15.1.0",
     "react-native": "0.27.2"
   }
