--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "hangmanclient",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
   "dependencies": {
     "effectjs": "0.0.8",
     "react": "^15.1.0",
     "react-native": "0.27.2"
+  },
+  "scripts": {
+    "postinstall": "node node_modules/typings/dist/bin.js install",
+    "build": "gulp build",
+    "watch": "gulp watch",
+    "start": "concurrently \"npm run watch\" \"node node_modules/react-native/local-cli/cli.js start\" ",
+    "android": "adb reverse tcp:8081 tcp:8081 && node node_modules/react-native/local-cli/cli.js run-android",
+    "ios": "node node_modules/react-native/local-cli/cli.js run-ios"
+  },
+  "devDependencies": {
+    "concurrently": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^2.12.1",
+    "typescript": "^1.8.9",
+    "typings": "^0.7.9"
   }
 }
