Update typing for records to enable typed records.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "effectjs": "0.0.8",
+    "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-native": "0.27.2"
   },
