--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "postinstall": "node node_modules/typings/dist/bin.js install",
+    "prebuild": "rimraf built",
     "build": "gulp build",
     "watch": "gulp watch",
     "start": "concurrently \"npm run watch\" \"node node_modules/react-native/local-cli/cli.js start\" ",
@@ -20,6 +21,7 @@
     "concurrently": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.12.1",
+    "rimraf": "^2.5.3",
     "typescript": "^1.8.9",
     "typings": "^0.7.9"
   }
