--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
         "preserveConstEnums": true,
         "outDir": "built",
         "rootDir": "src",
-        "sourceMap": true,
-        "allowJs": true
+        "sourceMap": true
     },
     "filesGlob": [
         "typings/**/*.d.ts",
