Create game functionality

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "effectjs": "0.1.0-beta",
     "immutable": "^3.8.1",
     "react": "^15.1.0",
-    "react-native": "0.27.2"
+    "react-native": "0.27.2",
+    "uuid": "^2.0.2"
   },
   "scripts": {
     "postinstall": "node node_modules/typings/dist/bin.js install",
