--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "node node_modules/typings/dist/bin.js install",
     "prebuild": "rimraf built",
     "build": "tsc",
+    "test": "tsc -p tsconfig.test.json && ava",
     "start": "concurrently \"npm run build\" \"node node_modules/react-native/local-cli/cli.js start\" ",
     "android": "adb reverse tcp:8081 tcp:8081 && node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
