--- a/package.json
+++ b/package.json
@@ -14,14 +14,33 @@
     "prebuild": "rimraf built",
     "build": "gulp build",
     "watch": "gulp watch",
+    "test": "tsc -p tsconfig.test.json && ava",
     "start": "concurrently \"npm run watch\" \"node node_modules/react-native/local-cli/cli.js start\" ",
     "android": "adb reverse tcp:8081 tcp:8081 && node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios"
   },
+  "ava": {
+      "require": [
+          "react-native-mock/mock.js",
+          "babel-register"
+      ],
+    "babel": {
+      "presets": [
+        "react-native"
+      ]
+    }
+  },
   "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-plugin-espower": "^2.3.1",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "concurrently": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.12.1",
+    "react-native-mock": "^0.2.6",
     "rimraf": "^2.5.3",
     "typescript": "^1.8.9",
     "typings": "^0.7.9"
