--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "exclude": [
         "typings/browser.d.ts",
         "typings/browser",
-        "node_modules"
+        "node_modules",
+        "test"
     ],
     "compileOnSave": false,
     "atom": {
