--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "effectjs": "0.1.0-beta",
     "immutable": "^3.8.1",
-    "react": "^15.1.0",
+    "react": "^15.3.1",
     "react-native": "^0.32.0",
     "uuid": "^2.0.2"
   },
@@ -13,8 +13,9 @@
     "postinstall": "node node_modules/typings/dist/bin.js install",
     "prebuild": "rimraf built",
     "build": "tsc",
+    "watch": "tsc --watch",
     "test": "tsc -p tsconfig.test.json && ava",
-    "start": "concurrently \"npm run build\" \"node node_modules/react-native/local-cli/cli.js start\" ",
+    "start": "concurrently \"npm run watch\" \"node node_modules/react-native/local-cli/cli.js start\" ",
     "android": "adb reverse tcp:8081 tcp:8081 && node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "commit": "git-cz"
@@ -32,15 +33,9 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "babel-plugin-espower": "^2.3.1",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-react-native": "^1.9.0",
     "commitizen": "^2.8.6",
     "concurrently": "^2.0.0",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^2.12.1",
     "react-native-mock": "^0.2.6",
     "rimraf": "^2.5.3",
     "typescript": "^2.0.2",
